Fixes the problem where PrintPreview is getting multiple Initial reflows and includes a minor optimization when resizing the view during box layout Bug 118968 r=attinasi sr=hyatt a=brendan